--- a/dev/sass/components/elements.sass
+++ b/dev/sass/components/elements.sass
@@ -41,7 +41,6 @@
 // btn style
 //-----------------------------------------------------------------------------------
 .el-btn
-  display: inline-block
   box-sizing: border-box
   padding: 11px 20px
   height: 40px
@@ -50,8 +49,7 @@
   color: white
   text-align: center
   text-decoration: none
-  box-sizing: border-box
-  font: 700 13px/13px $open
+  font: 700 13px/1 $open
   transition: all .12s ease
   &:hover
     background: white
@@ -104,7 +102,6 @@
 
 // select
 //-----------------------------------------------------------------------------------
-
 .el-select
   position: relative
   display: block
