--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -16,6 +16,7 @@
 // import components
 //-----------------------------------------------------------------------------------
 @import components/elements.sass
+@import components/modal.sass
 @import components/header.sass
 @import components/footer.sass
 @import components/plugin.sass
