--- a/dev/sass/pages/course.sass
+++ b/dev/sass/pages/course.sass
@@ -78,6 +78,11 @@
     margin-bottom: 10px
     color: black
     font: 300 24px/36px $open
+    a
+      color: #9b9b9b
+      text-decoration: none
+      &:hover
+        text-decoration: underline
 
   .sidebar
     width: 360px
