--- a/dev/sass/components/modal.sass
+++ b/dev/sass/components/modal.sass
@@ -31,10 +31,10 @@
 .form-input
   position: relative
 
-::placeholder
-  color: #a1a1a1
-  text-transform: uppercase
-  font: 300 20px/25px $open
+//::placeholder
+//  color: #a1a1a1
+//  text-transform: uppercase
+  //font: 300 20px/25px $open
 
 // Sign-up modal
 //-----------------------------------------------------------------------------------
