--- a/dev/templates/course.html
+++ b/dev/templates/course.html
@@ -278,7 +278,7 @@
                             <!-- End colon-section -->
 
                             <div class="text-center connect">
-                                <a href="#" class="el-btn blue-style">Записаться</a>
+                                <a href="#" class="el-btn pur-style">Записаться</a>
                             </div>
 
                             <!-- Begin list-dropdown-section -->
@@ -457,7 +457,7 @@
                             <!-- End rating-section -->
 
                             <div class="text-center connect">
-                                <a href="#" class="el-btn blue-style">Записаться</a>
+                                <a href="#" class="el-btn pur-style">Записаться</a>
                             </div>
 
                             <!-- Begin course-section -->
