--- a/dev/sass/pages/specialization.sass
+++ b/dev/sass/pages/specialization.sass
@@ -214,13 +214,13 @@
       color: black
       font: 400 14px/22px $open
       span
-        display: inline-block
+        //display: inline-block
         //float: left
     .text
       width: 80%
     .prose
       text-align: right
       width: 20%
-      float: right
+      //float: right
 
   .right-payment
