--- a/dev/templates/specialization.html
+++ b/dev/templates/specialization.html
@@ -437,6 +437,14 @@
                                 <div class="row">
                                 <div class="certificate col-sm-8">
                                     <h2 class="title-section">Стоимость получения сертификата</h2>
+
+                                    <a href="#">Все курсы (6)</a>
+                                    <span>22 300</span>
+                                    <div class="skidka">
+                                        <span>18 500 <img src="images/icons/icon-rub.svg" alt=""></span>
+                                        <p>Экономия 10%</p>
+                                    </div>
+
                                     <ol>
                                         <li>
                                             <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
