--- a/dev/templates/specialization.html
+++ b/dev/templates/specialization.html
@@ -432,35 +432,43 @@
                             </section>
                             <!-- End list-dropdown-section -->
 
+                            <div class="text-center connect">
+                                <a href="#" class="el-btn pur-style">Записаться</a>
+                            </div>
+
                             <!-- Begin  certificate-section -->
                             <section class="css-shadow certificate-section">
                                 <div class="row">
                                 <div class="certificate col-sm-8">
                                     <h2 class="title-section">Стоимость получения сертификата</h2>
+                                    <div class="all-courses">
+                                        <a href="#">Все курсы (6)</a>
+                                        <div class="all-prises">
+                                            <span class="olt-prise">22 300</span>
+                                            <div class="skidka">
+                                                <span>18 500 <img src="images/icons/icon-rub-strong.svg" alt=""></span>
+                                                <p>Экономия 10%</p>
+                                            </div>
+                                        </div>
 
-                                    <a href="#">Все курсы (6)</a>
-                                    <span>22 300</span>
-                                    <div class="skidka">
-                                        <span>18 500 <img src="images/icons/icon-rub.svg" alt=""></span>
-                                        <p>Экономия 10%</p>
                                     </div>
 
                                     <ol>
                                         <li>
-                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                             <span class="prose">4 600 <img src="images/icons/icon-rub.svg" alt=""></span>
+                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                         </li>
                                         <li>
-                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                             <span class="prose">5 620 <img src="images/icons/icon-rub.svg" alt=""></span>
+                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                         </li>
                                         <li>
-                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                             <span class="prose">14 350 <img src="images/icons/icon-rub.svg" alt=""></span>
+                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                         </li>
                                         <li>
-                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                             <span class="prose">7 150 <img src="images/icons/icon-rub.svg" alt=""></span>
+                                            <span class="text">Machine Learning Foundations: A Case Study Approach Foundations: A Case Study Approach</span>
                                         </li>
                                     </ol>
                                 </div>
