--- a/dev/sass/pages/specialization.sass
+++ b/dev/sass/pages/specialization.sass
@@ -8,14 +8,14 @@
     &:after
       display: none
   &:after
-    content: ''
     position: absolute
+    right: -30px
     bottom: 0px
     left: -30px
-    right: -30px
     height: 1px
-    opacity: 0.1
     background-color: #4a72f5
+    content: ''
+    opacity: 0.1
     @media (max-width: $screen-xs-max)
       position: static
   &.js-open
@@ -25,22 +25,22 @@
       display: block
 
   .title-item-strong
-    cursor: pointer
-    padding-right: 40px
     position: relative
+    padding-right: 40px
     color: black
     font: 400 18px/26px $open
+    cursor: pointer
     @media (max-width: $screen-xs-max)
       padding-left: 0
       padding-right: 30px
     &:after
-      content: ''
       position: absolute
-      right: 0
       top: 10px
+      right: 0
       width: 11px
       height: 7px
       background: url(../images/icons/arrow-down-pure.svg)
+      content: ''
     .purpur
       color: #4a72f5
       font: 700 18px/26px $open
@@ -70,6 +70,8 @@
 
 .carts-section
   @extend %clear-fix
+  margin-bottom: 70px !important
+
   .necessary, .salary
     float: left
     box-sizing: border-box
@@ -87,14 +89,14 @@
     span
       color: black
     a
-      text-decoration: none
-      color: #9b9b9b
       margin-left: 5px
+      color: #9b9b9b
+      text-decoration: none
       .yandex
-        width: 50px
         display: inline-block
-        vertical-align: text-top
         margin-bottom: -15px
+        width: 50px
+        vertical-align: text-top
 
 
 
@@ -143,8 +145,8 @@
   .necessary
     ul
       @extend %clear-fix
-      margin-bottom: 10px
       margin-top: 20px
+      margin-bottom: 10px
     li
       float: left
       box-sizing: border-box
@@ -203,24 +205,95 @@
         border-color: transparent
 
 .certificate-section
+  position: relative
+  margin-bottom: 70px !important
+
+  &:before
+    position: absolute
+    width: 1px
+    content: ""
+    top: 0px
+    bottom: 0
+    background-color: #ececec
+    right: 245px
+
   .certificate
+    .all-courses
+      @extend %clear-fix
+      margin-bottom: 20px
+
+      a
+        display: inline-block
+        margin-top: 3px
+        color: black
+        text-decoration: none
+        font: 400 16px/34px $open
+
+      .olt-prise
+        float: left
+        margin-top: 3px
+        color: #9b9b9b
+        text-decoration: line-through
+        font: 400 18px/36px $open
+
+      .all-prises
+        display: inline-block
+        float: right
+        width: 210px
+        vertical-align: middle
+        text-align: right
+
+      .skidka
+        display: inline-block
+        text-align: left
+        span
+          color: black
+          font: 400 30px/36px $open
+          img
+            margin-bottom: 4px
+            vertical-align: middle
+        p
+          color: #fb5570
+          font: 400 13px/24px $open
+
     ol
       padding-left: 20px
-      list-style-type: decimal
       list-style-position: initial
+      list-style-type: decimal
     li
       @extend %clear-fix
-      margin-bottom: 34px
+      margin-bottom: 26px
       color: black
       font: 400 14px/22px $open
-      span
-        //display: inline-block
-        //float: left
+      &:last-child
+        margin-bottom: 10px
+
     .text
       width: 80%
+
     .prose
-      text-align: right
+      float: right
       width: 20%
-      //float: right
+      color: black
+      text-align: right
+      font: 400 22px/22px $open
+      img
+        margin-bottom: 4px
+        vertical-align: middle
 
   .right-payment
+    padding-left: 40px
+    ul
+      margin-top: 18px
+    li
+      margin-bottom: 25px
+      &:last-child
+        margin-bottom: 0
+    img
+      margin-bottom: 10px
+    p
+      color: #9b9b9b
+      font: 400 13px/20px $open
+      &.name
+        color: black
+        font: 400 14px/24px $open
