--- a/css/plugins/font-icon-codes.css
+++ b/css/plugins/font-icon-codes.css
@@ -5,9 +5,14 @@
 .icon-down-dir:before { content: '\e803'; } /* '' */
 .icon-filter:before { content: '\e804'; } /* '' */
 .icon-up-dir:before { content: '\e805'; } /* '' */
+.icon-down-open-mini:before { content: '\e806'; } /* '' */
 .icon-rectangle:before { content: '\e807'; } /* '' */
 .icon-search-btn:before { content: '\e808'; } /* '' */
 .icon-tw:before { content: '\e809'; } /* '' */
+.icon-left-open-mini:before { content: '\e80a'; } /* '' */
+.icon-right-open-mini:before { content: '\e80b'; } /* '' */
+.icon-up-open-mini:before { content: '\e80c'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-vkontakte:before { content: '\f189'; } /* '' */
 .icon-gplus:before { content: '\f30f'; } /* '' */
