--- a/css/plugins/font-icon.css
+++ b/css/plugins/font-icon.css
@@ -1,21 +1,11 @@
-/*@font-face {*/
-  /*font-family: 'font-icon';*/
-  /*src: url('../font/font-icon.eot?36352324');*/
-  /*src: url('../font/font-icon.eot?36352324#iefix') format('embedded-opentype'),*/
-       /*url('../font/font-icon.woff2?36352324') format('woff2'),*/
-       /*url('../font/font-icon.woff?36352324') format('woff'),*/
-       /*url('../font/font-icon.ttf?36352324') format('truetype'),*/
-       /*url('../font/font-icon.svg?36352324#font-icon') format('svg');*/
-  /*font-weight: normal;*/
-  /*font-style: normal;*/
-/*}*/
+
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'font-icon';
-    src: url('../font/font-icon.svg?36352324#font-icon') format('svg');
+    src: url('../font/font-icon.svg?64154097#font-icon') format('svg');
   }
 }
 */
@@ -61,9 +51,14 @@
 .icon-down-dir:before { content: '\e803'; } /* '' */
 .icon-filter:before { content: '\e804'; } /* '' */
 .icon-up-dir:before { content: '\e805'; } /* '' */
+.icon-down-open-mini:before { content: '\e806'; } /* '' */
 .icon-rectangle:before { content: '\e807'; } /* '' */
 .icon-search-btn:before { content: '\e808'; } /* '' */
 .icon-tw:before { content: '\e809'; } /* '' */
+.icon-left-open-mini:before { content: '\e80a'; } /* '' */
+.icon-right-open-mini:before { content: '\e80b'; } /* '' */
+.icon-up-open-mini:before { content: '\e80c'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-vkontakte:before { content: '\f189'; } /* '' */
 .icon-gplus:before { content: '\f30f'; } /* '' */
