--- a/dev/templates/personal.html
+++ b/dev/templates/personal.html
@@ -41,6 +41,37 @@
                             <!-- Begin section-2 -->
                             <section class="css-shadow section-2">
                                 <h2 class="title-section">Мои профессии</h2>
+
+                                <div id="icons" class="container">
+                                    <div class="row">
+                                        <div title="Code: 0xe800" class="the-icons span3"><i class="demo-icon icon-arrow-l">&#xe800;</i> <span class="i-name">icon-arrow-l</span><span class="i-code">0xe800</span></div>
+                                        <div title="Code: 0xe801" class="the-icons span3"><i class="demo-icon icon-mail">&#xe801;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe801</span></div>
+                                        <div title="Code: 0xe802" class="the-icons span3"><i class="demo-icon icon-combined-shape">&#xe802;</i> <span class="i-name">icon-combined-shape</span><span class="i-code">0xe802</span></div>
+                                        <div title="Code: 0xe803" class="the-icons span3"><i class="demo-icon icon-down-dir">&#xe803;</i> <span class="i-name">icon-down-dir</span><span class="i-code">0xe803</span></div>
+                                    </div>
+                                    <div class="row">
+                                        <div title="Code: 0xe804" class="the-icons span3"><i class="demo-icon icon-filter">&#xe804;</i> <span class="i-name">icon-filter</span><span class="i-code">0xe804</span></div>
+                                        <div title="Code: 0xe805" class="the-icons span3"><i class="demo-icon icon-up-dir">&#xe805;</i> <span class="i-name">icon-up-dir</span><span class="i-code">0xe805</span></div>
+                                        <div title="Code: 0xe807" class="the-icons span3"><i class="demo-icon icon-rectangle">&#xe807;</i> <span class="i-name">icon-rectangle</span><span class="i-code">0xe807</span></div>
+                                        <div title="Code: 0xe808" class="the-icons span3"><i class="demo-icon icon-search-btn">&#xe808;</i> <span class="i-name">icon-search-btn</span><span class="i-code">0xe808</span></div>
+                                    </div>
+                                    <div class="row">
+                                        <div title="Code: 0xe809" class="the-icons span3"><i class="demo-icon icon-tw">&#xe809;</i> <span class="i-name">icon-tw</span><span class="i-code">0xe809</span></div>
+                                        <div title="Code: 0xe80d" class="the-icons span3"><i class="demo-icon icon-vk">&#xe80d;</i> <span class="i-name">icon-vk</span><span class="i-code">0xe80d</span></div>
+                                        <div title="Code: 0xf09a" class="the-icons span3"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
+                                        <div title="Code: 0xf104" class="the-icons span3"><i class="demo-icon icon-angle-left">&#xf104;</i> <span class="i-name">icon-angle-left</span><span class="i-code">0xf104</span></div>
+                                    </div>
+                                    <div class="row">
+                                        <div title="Code: 0xf105" class="the-icons span3"><i class="demo-icon icon-angle-right">&#xf105;</i> <span class="i-name">icon-angle-right</span><span class="i-code">0xf105</span></div>
+                                        <div title="Code: 0xf106" class="the-icons span3"><i class="demo-icon icon-angle-up">&#xf106;</i> <span class="i-name">icon-angle-up</span><span class="i-code">0xf106</span></div>
+                                        <div title="Code: 0xf107" class="the-icons span3"><i class="demo-icon icon-angle-down">&#xf107;</i> <span class="i-name">icon-angle-down</span><span class="i-code">0xf107</span></div>
+                                        <div title="Code: 0xf16a" class="the-icons span3"><i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span></div>
+                                    </div>
+                                    <div class="row">
+                                        <div title="Code: 0xf189" class="the-icons span3"><i class="demo-icon icon-vkontakte">&#xf189;</i> <span class="i-name">icon-vkontakte</span><span class="i-code">0xf189</span></div>
+                                        <div title="Code: 0xf30f" class="the-icons span3"><i class="demo-icon icon-gplus">&#xf30f;</i> <span class="i-name">icon-gplus</span><span class="i-code">0xf30f</span></div>
+                                    </div>
+                                </div>
                             </section>
                             <!-- End section-2 -->
 
@@ -71,7 +102,7 @@
                                             <ul>
                                                 <li></li>
                                                 <li><a href="#"></a></li>
-                                                <li><a href="#"></a></li>
+                                                <li><a href="#"><i class="icon-down-open-mini"></i></a></li>
                                             </ul>
                                         </li>
                                         <li>
