--- a/css/plugins/font-icon-codes.css
+++ b/css/plugins/font-icon-codes.css
@@ -5,9 +5,11 @@
 .icon-down-dir:before { content: '\e803'; } /* '' */
 .icon-filter:before { content: '\e804'; } /* '' */
 .icon-up-dir:before { content: '\e805'; } /* '' */
+.icon-cancel:before { content: '\e806'; } /* '' */
 .icon-rectangle:before { content: '\e807'; } /* '' */
 .icon-search-btn:before { content: '\e808'; } /* '' */
 .icon-tw:before { content: '\e809'; } /* '' */
+.icon-ok-1:before { content: '\e80b'; } /* '' */
 .icon-vk:before { content: '\e80d'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-angle-left:before { content: '\f104'; } /* '' */
