--- a/css/plugins/font-icon.css
+++ b/css/plugins/font-icon.css
@@ -5,7 +5,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'font-icon';
-    src: url('../font/font-icon.svg?9269175#font-icon') format('svg');
+    src: url('../font/font-icon.svg?5959586#font-icon') format('svg');
   }
 }
 */
@@ -51,9 +51,11 @@
 .icon-down-dir:before { content: '\e803'; } /* '' */
 .icon-filter:before { content: '\e804'; } /* '' */
 .icon-up-dir:before { content: '\e805'; } /* '' */
+.icon-cancel:before { content: '\e806'; } /* '' */
 .icon-rectangle:before { content: '\e807'; } /* '' */
 .icon-search-btn:before { content: '\e808'; } /* '' */
 .icon-tw:before { content: '\e809'; } /* '' */
+.icon-ok-1:before { content: '\e80b'; } /* '' */
 .icon-vk:before { content: '\e80d'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-angle-left:before { content: '\f104'; } /* '' */
