--- a/dev/sass/pages/profession.sass
+++ b/dev/sass/pages/profession.sass
@@ -382,6 +382,7 @@
 
     .title-name
       margin-bottom: 13px
+      max-width: 520px
       color: #4a72f5
       font: 400 16px/24px $open
       a
